--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <i class="fa-solid fa-phone"></i><span> +916380886238 / +917397464988</span>
       </a>
       <a href="mailto:vjmservices@gmail.com" class="contact-item">
-        <i class="fa-solid fa-envelope"></i><span>vjmservices@gmail.com</span>
+        <i class="fa-solid fa-envelope"></i><span>vjmserviceandsolarsale@gmail.com</span>
       </a>
       <a href="https://wa.me/916380886238" target="_blank" class="contact-item">
         <i class="fa-brands fa-whatsapp"></i><span>WhatsApp</span>
@@ -630,7 +630,7 @@
       <h3>Contact Us</h3>
       <p><i class="fa-solid fa-location-dot"></i> Kamarajar Salai, Venkatesh Nagar, Virugambakkam, Chennai – 600092</p>
       <p><i class="fa-solid fa-clock"></i> Business Hours: 6:00 AM – 10:00 PM (Open 7 Days)</p>
-      <p><i class="fa-solid fa-envelope"></i> vjmservicecenter@gmail.com</p>
+      <p><i class="fa-solid fa-envelope"></i> vjmserviceandsolarsale@gmail.com</p>
       <p><i class="fa-solid fa-phone"></i> +91 63808 86238</p>
 
       <div class="footer-social">
